--- a/index.html.html
+++ b/index.html.html
@@ -72,7 +72,7 @@
 
     <div class="container">
         <div class="photo">
-            <img src="fotkizolo/photo_2" alt="Фото Ивана Золо" />
+            <img src="img/photo_2" alt="Фото Ивана Золо" />
         </div>
 
         <h2>Обо мне</h2>
@@ -91,8 +91,8 @@
 
         <h2>Фотографии</h2>
         <div class="photo">
-            <img src="fotkizolo/photo_3" alt="Иван Золо фото 1" />
-            <img src="fotkizolo/photo_1" alt="Иван Золо фото 2" style="margin-left:20px;" />
+            <img src="img/photo_3" alt="Иван Золо фото 1" />
+            <img src="img/photo_1" alt="Иван Золо фото 2" style="margin-left:20px;" />
         </div>
 
         <h2>Деятельность</h2>
@@ -115,4 +115,5 @@
         © 2025 Иван Золо. Все права защищены.
     </footer>
 </body>
+
 </html>
